--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-我是index.html文件
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+        我是index.html文件
 123123
 23
 234
@@ -6,3 +16,6 @@
 2345435
 2324
 234234
+    </div>
+</body>
+</html>
